<resources>
    <string name="app_name">LifePulse</string>
    <string name="delete">Delete</string>
    <string name="no_data_on_date">No data logged on %1$s.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="lifepulse">LifePulse</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="greeting">Hello, %1$s</string>
    <string name="default_time">00:00</string>
    <string name="play_pause">Play / Pause</string>
    <string name="ocean">Ocean</string>
    <string name="rain">Rain</string>
    <string name="birds">Birds</string>
    <string name="piano">Piano</string>
    <string name="time_for_your_habit">Time for your habit!</string>
    <string name="turn_off_alarm">Turn Off Alarm</string>
    <string name="habit_name">Habit name</string>
    <string name="select_icon">Select Icon</string>
    <string name="create_habit">Create Habit</string>
    <string name="i_drank_water">I Drank Water</string>
    <string name="view_hydration_history">View Hydration History</string>
    <string name="next_reminder_in_00_00_00">Next reminder in 00:00:00</string>
    <string name="full_name">Full Name</string>
    <string name="password1">Password</string>
    <string name="email1">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="clear_all">Clear All</string>
    <string name="notifications">Notifications</string>
    <string name="get_started">Get Started!</string>
    <string name="add_habit">+ Add Habit</string>
    <string name="save_stats">Save Stats</string>
    <string name="current_streak_0_days">Current Streak: 0 days</string>
    <string name="daily_progress">Daily Progress</string>
    <string name="steps_0_5000">Steps: 0 / 5000</string>
    <string name="enter_new_habit">Enter new habit</string>
    <string name="hydrate">Hydrate</string>
    <string name="_0_ml_0">0 ml (0%)</string>
    <string name="_250_ml">250 ml</string>
    <string name="_500_ml">500 ml</string>
    <string name="other">Other</string>
    <string name="_1000_ml">1000 ml</string>
    <string name="today">Today</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="total_intake_0_ml">Total intake: 0 ml</string>
    <string name="no_hydration_logs">No hydration logs.</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="change_picture">Change Picture</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name:</string>
    <string name="steps_goal">Steps Goal:</string>
    <string name="water_goal">Water Goal:</string>
    <string name="habit_streak">Habit Streak:</string>
    <string name="joined">Joined:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="burned_0_kcal">Burned: 0 kcal</string>
    <string name="_0_2000_steps">0 / 2000 steps</string>
    <string name="foot_steps">Foot Steps</string>
    <string name="quick_add_water">💧 Quick Add Water</string>
    <string name="progress_0">Progress: 0%</string>
    <string name="habit_name_30_mins">Habit Name (30 mins)</string>
    <string name="at_08_00_am">At 08:00 AM</string>
    <string name="peaceful">Peaceful</string>
    <string name="_27_09_2025_14_13">27/09/2025 14:13</string>
    <string name="delete_mood">Delete mood</string>
    <string name="log_item">Log Item</string>
    <string name="_2025_10_04">2025-10-04</string>
    <string name="_14_20">14:20</string>
    <string name="_500ml">500ml</string>
    <string name="remove">Remove</string>
    <string name="habit_icon">Habit icon</string>
    <string name="time_08_00">Time: 08:00</string>
    <string name="duration_30_mins">Duration: 30 mins</string>
    <string name="mon">Mon</string>
    <string name="status_pending">Status: Pending</string>
    <string name="today1">Today</string>
    <string name="no_step_logs">No step logs.</string>
    <string name="hydration_reminder">💧 Hydration Reminder</string>
    <string name="steps_history">👣 Steps History</string>
    <string name="backup_data">📂 Backup Data</string>
    <string name="restore_data">🔄 Restore Data</string>
    <string name="delete_account">❌ Delete Account</string>
    <string name="logout">Logout</string>
    <string name="activities_on_2025_10_01">Activities on 2025-10-01</string>
    <string name="water_0_2000_ml">Water: 0 / 2000 ml</string>
    <string name="your_daily_tracker">Your Daily Tracker</string>
    <string name="water_intake_0_2000_ml">Water Intake: 0 / 2000 ml</string>
    <string name="menu">Menu</string>
    <string name="september_2025">September 2025</string>
    <string name="work_out">Work Out</string>
    <string name="eat_food">Eat Food</string>
    <string name="music">Music</string>
    <string name="art_and_design">Art and Design</string>
    <string name="traveling">Traveling</string>
    <string name="read_book">Read Book</string>
    <string name="gaming">Gaming</string>
    <string name="mood_distribution_last_7_days">Mood Distribution (Last 7 Days)</string>
    <string name="mood_counts_per_day">Mood Counts Per Day</string>
    <string name="habit_completion_last_7_days">Habit Completion % (Last 7 Days)</string>
    <string name="steps_progress_last_7_days">Steps Progress (Last 7 Days)</string>
    <string name="save">Save</string>
</resources>
