<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg_mood_gradient">


    <!-- Old Password -->
    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_old_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:layout_marginBottom="10dp" />

    <!-- New Password -->
    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:layout_marginBottom="10dp" />

    <!-- Confirm Password -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:padding="8dp" />

</LinearLayout>
